compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 740
expression: "\nfn id(x: a, y: a) { x }\npub fn x() { id(1, 1.0) }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:20
  │
3 │ pub fn x() { id(1, 1.0) }
  │                    ^^^

Expected type:

    Int

Found type:

    Float


